# pyconus_2024

./: LICENSE  pyproject.toml
src/: 1.py  1_with_type.py  1_with_type_with_restriction.py  1_with_type_with_restriction_keyword.py  1_without_type.py  2.py  2_requsets_vs_httpx.py  2_with_responseLike.py  2_with_tyepVarTuple.py  3_callable_vs_protocol.py  3_responseLike.py  3_with_paramspec.py  3_with_responseLike.py  4.py  4_with_Concatenate.py  4_with_paramspec.py  5.py  5_with_Concatenate.py  5_with_type_parameter_syntax.py  6.py  6_with_type.py  6_with_type_parameter_syntax.py  7_with_tyepVarTuple.py  7_with_type.py
src/remote_logger/: __init__.py
